--- a/ShopOnline.Data/ShopOnline.Data.csproj
+++ b/ShopOnline.Data/ShopOnline.Data.csproj
@@ -47,7 +47,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\DbFactory.cs" />
+    <Compile Include="Infrastructure\Disposable.cs" />
+    <Compile Include="Infrastructure\IDbFactory.cs" />
+    <Compile Include="Infrastructure\IRepository.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
+    <Compile Include="Infrastructure\RepositoryBase.cs" />
+    <Compile Include="Infrastructure\UnitOfWork.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Respositories\FooterRepository.cs" />
+    <Compile Include="Respositories\MenuGroupRepository.cs" />
+    <Compile Include="Respositories\MenuRepository.cs" />
+    <Compile Include="Respositories\OrderDetailRepository.cs" />
+    <Compile Include="Respositories\OrderRepository.cs" />
+    <Compile Include="Respositories\PageRepository.cs" />
+    <Compile Include="Respositories\PostCategoryRepository.cs" />
+    <Compile Include="Respositories\PostRepository.cs" />
+    <Compile Include="Respositories\PostTagRepository.cs" />
+    <Compile Include="Respositories\ProductCategoryRepository.cs" />
+    <Compile Include="Respositories\ProductRepository.cs" />
+    <Compile Include="Respositories\ProductTagRepository.cs" />
+    <Compile Include="Respositories\SlideRepository.cs" />
+    <Compile Include="Respositories\SupportOnlineRepository.cs" />
+    <Compile Include="Respositories\SystemConfigRepository.cs" />
+    <Compile Include="Respositories\TagRepository.cs" />
+    <Compile Include="Respositories\VisitorStatisticRepository.cs" />
+    <Compile Include="ShopOnlineDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -58,6 +84,11 @@
       <Project>{a56fe5ae-1690-4cec-8a12-2d11999b4b5c}</Project>
       <Name>ShopOnline.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ShopOnline.Model\ShopOnline.Model.csproj">
+      <Project>{dd936873-1d70-4679-ac84-336028b01580}</Project>
+      <Name>ShopOnline.Model</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
