--- a/ShopOnline.Data/ShopOnline.Data.csproj
+++ b/ShopOnline.Data/ShopOnline.Data.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
+    <Compile Include="Migrations\201805040630112_InitialDB.cs" />
+    <Compile Include="Migrations\201805040630112_InitialDB.Designer.cs">
+      <DependentUpon>201805040630112_InitialDB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respositories\FooterRepository.cs" />
@@ -89,6 +93,10 @@
       <Name>ShopOnline.Model</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201805040630112_InitialDB.resx">
+      <DependentUpon>201805040630112_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
